--- a/java script/javascript400.html
+++ b/java script/javascript400.html
@@ -230,11 +230,34 @@
         .ol6::before{
             content : "데이터 공부 하기 : ";
         }
+        .page {
+            position: absolute;
+            margin: 20px;
+            top: 15px;
+        }
+        .page li {
+            display: inline;
+            list-style: none;
+        }
+        .page li a {
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+            color: #00DB72;
+        }
     </style>
 </head>
 
 <body>
     <h1>Javascript 문법 정리</h1>
+
+    <ul class="page">
+        <li><a href="#">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../java script/javascript100.html">JAVASCRIPT</a></li>  
+    </ul>
+
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
