--- a/java script/javascript300.html
+++ b/java script/javascript300.html
@@ -228,11 +228,34 @@
         .ol6::before{
             content : "데이터 공부 하기 : ";
         }
+        .page {
+            position: absolute;
+            margin: 20px;
+            top: 15px;
+        }
+        .page li {
+            display: inline;
+            list-style: none;
+        }
+        .page li a {
+            text-decoration: none;
+            color: #222;
+        }
+        .page li a:hover{
+            color: #00DB72;
+        }
     </style>
 </head>
 
 <body>
     <h1>Javascript 문법 정리</h1>
+
+    <ul class="page">
+        <li><a href="#">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../java script/javascript100.html">JAVASCRIPT</a></li>  
+    </ul>
+
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -291,6 +314,14 @@
             <li><a href="#sample17">17. 콜백 함수</a></li>
             <li><a href="#sample18">18. 콜백 함수 : 반복문</a></li>
             <li><a href="#sample19">19. 콜백 함수 : 동기/비동기</a></li>
+        </ul>
+
+        <h2 class="mt20">데이터 실행 : 함수</h2>
+        <ul>
+            <li><a href="#sample1">01. setInterval()</a></li>
+            <li><a href="#sample1">02. setTimeout()</a></li>
+            <li><a href="#sample1">03. clearInterval(0</a></li>
+            <li><a href="#sample1">04. clearTimeout()</a></li>
         </ul>
 
     <hr>
