--- a/index.html
+++ b/index.html
@@ -285,16 +285,16 @@
                         <a href="site/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">Wireframe</span>
-                                    <span class="overlay-text-thumb-donut">와이어 프레임</span>
-                                    <span class="overlay-text-thumb1-donut">와이어 프레임</span>
-                                    <span class="overlay-text-thumb2-donut">Wireframe</span>
+                                    <span class="overlay-img-donut">SITE</span>
+                                    <span class="overlay-text-thumb-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb1-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb2-donut">SITE</span>
                                 </div>
                                 <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>Wireframe</h5>
-                                    <p>와이어 프레임</p>
-                                    <span>Wireframe</span>
+                                    <h5>SITE</h5>
+                                    <p>사이트 제작</p>
+                                    <span>SIITE</span>
                                 </div>
                             </div>
                         </a>
