--- a/java script/javascriptRefer01.html
+++ b/java script/javascriptRefer01.html
@@ -38,7 +38,8 @@
         }
 
         h1 {
-            padding: 20px 0;
+            padding-top: 40px;
+            padding-bottom: 20px;
         }
         h1 a {
             font-family: 'TmonMonsori'
@@ -222,6 +223,9 @@
             border-style: solid;
         }
         @media (max-width : 800px) {
+            h1 {
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
