--- a/java script/javascriptRefer02.html
+++ b/java script/javascriptRefer02.html
@@ -37,7 +37,8 @@
         }
 
         h1 {
-            padding: 20px 0;
+            padding-top: 40px;
+            padding-bottom: 20px;
         }
         h1 a {
             font-family: 'TmonMonsori';
@@ -219,6 +220,9 @@
             border-style: solid;
         }
         @media (max-width : 800px) {
+            h1 {
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
