--- a/java script/javascriptRefer04.html
+++ b/java script/javascriptRefer04.html
@@ -39,6 +39,7 @@
         }
 
         h1 {
+            padding-top: 40px;
             padding-bottom: 20px;
         }
         h1 a {
@@ -226,6 +227,9 @@
             border-style: solid;
         }
         @media (max-width : 800px) {
+            h1 {
+                text-align: center;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
