--- a/java script/javascriptRefer05.html
+++ b/java script/javascriptRefer05.html
@@ -29,7 +29,6 @@
             padding: 0;
             font-family: 'NEXON Lv1 Gothic OTF';
             line-height: 1.6;
-            word-break: break-all;
         }
 
         body {
@@ -38,6 +37,7 @@
         }
 
         h1 {
+            padding-top: 40px;
             padding-bottom: 20px;
         }
         h1 a {
@@ -262,6 +262,31 @@
             border-style: solid;
         }
         @media (max-width : 800px) {
+            body {
+                font-size: 13px;
+            }
+            h1 {
+                text-align: center;
+            }
+            .sample h2 {
+                font-size: 14px;
+                font-weight: normal;
+                padding: 7px 5px 5px;
+            }
+            .sample h2 .dot {
+                display: none;
+            }
+            .view {
+                padding: 5px;
+                max-width: 800px;
+                overflow :auto;
+            }
+            .view th {
+                font-weight: normal;
+            }
+            .view table td.result {
+                color : #000;
+            }
             .menu li a {
                 font-size: 12px;
                 padding: 5px 20px;
@@ -271,16 +296,6 @@
             }
             .list a {
                 font-size: 12px;
-            }
-            .sample h2 {
-                padding: 12px 10px 10px;
-                font-size: 14px;
-            }
-            .sample h2 .dot {
-                display: none;
-            }
-            .sample pre {
-                font-size: 14px;
             }
         }
     </style>
