--- a/java script/javascriptRefer06.html
+++ b/java script/javascriptRefer06.html
@@ -59,7 +59,9 @@
         ul {
             list-style: none;
         }
-
+        ol {
+            padding-left: 26px;
+        }
         a {
             text-decoration: none;
             color: #333;
@@ -203,6 +205,7 @@
             padding-bottom: 11px;
             padding-left: 5px; */
             padding: 13px 5px 11px 5px;
+            
         }
 
         .view table td {
@@ -280,7 +283,12 @@
                 font-weight: normal;
             }
             .view table td.result {
-                color : #000;
+                color : #bdbdbd;
+                background: #f1f1f1;
+            }
+            .view table th,
+            .view table td {
+                white-space: nowrap;
             }
             .menu li a {
                 font-size: 12px;
@@ -329,29 +337,31 @@
 
 
         <h2 class="mt20">배열 메서드</h2>
-        <ul class="list">
-            <li><a href="#sample01">01.배열 메서드 : length : 배열 길이 구하기 : 반환(숫자) </a></li>
-            <li><a href="#sample02">02.배열 메서드 : join() : 배열 요소 결합하기 : 반환(문자열) </a></li>
-            <li><a href="#sample03">03.배열 메서드 : push() : 배열 마지막요소 추가하기 : 반환(숫자) </a></li>
-            <li><a href="#sample03">03.배열 메서드 : unshift() : 배열 처음 요소 추가하기 : 반환(숫자) </a></li>
-            <li><a href="#sample04">04.배열 메서드 : shift() : 배열 첫 요소 추가하기 : 반환(삭제된 요소) </a></li>
-            <li><a href="#sample04">04.배열 메서드 : pop() : 배열 마지막 요소 삭제하기 : 반환(삭제된 요소) </a></li>
-            <li><a href="#sample05">05.배열 메서드 : indexOf() : 배열 요소 검색하기 : 반환(숫자) </a></li>
-            <li><a href="#sample05">05.배열 메서드 : lastIndexOf() : 배열 요소 끝에서 검색하기 : 반환(숫자) </a></li>
-            <li><a href="#sample05">05.배열 메서드 : incluedes() : 배열 요소 검색하기 : 반환(숫자) </a></li>
-            <li><a href="#sample06">06.배열 메서드 : reverse() : 배열 요소의 순서를 반대로 정렬할 때 : 반환(배열) </a></li>
-            <li><a href="#sample06">06.배열 메서드 : sort() : 배열 요소를 정렬할 때 : 반환(배열) </a></li>
-            <li><a href="#sample07">07.배열 메서드 : concat() : 배열 요소를 결합할 때 : 반환(배열) </a></li>
-            <li><a href="#sample08">08.배열 메서드 : slice() : 배열 요소를 다른요소로 변경할 때 : 반환(배열) </a></li>
-            <li><a href="#sample09">09.배열 메서드 : splice() : 배열 요소를 다른요소로 변경할 때 : 반환(배열) </a></li>        
-            <li><a href="#sample10">10.배열 메서드 : find() : 배열 요소 검색하기 : 반환(요소) </a></li>
-            <li><a href="#sample10">10.배열 메서드 : findIndex() : 배열 첫 요소 검색하기 : 반환(요소) </a></li>
-            <li><a href="#sample11">11.배열 메서드 : filter() : 조건에 만족하는 배열 요소 검색하기 : 반환(배열) </a></li>
-            <li><a href="#sample12">12.배열 메서드 : map() : 배열 요소를 추출하여 새로운 배열로 만들기 : 반환(배열) </a></li>
-            <li><a href="#sample13">13.배열 메서드 : reduce() : 배열 요소를 하나로 만들기 : 반환(결과값) </a></li>
-            <li><a href="#sample13">13.배열 메서드 : reduceRight() : 배열 요소를 하나로 만들기 : 반환(결과값) </a></li>
-            <li><a href="#sample14">14.배열 메서드 : Array.from() : 배열로 변환하기 : 반환(배열) </a></li>
-        </ul>
+        <div class="list">
+        <ol>
+            <li><a href="#sample01">배열 메서드 : length : 배열 길이 구하기 : 반환(숫자) </a></li>
+            <li><a href="#sample02">배열 메서드 : join() : 배열 요소 결합하기 : 반환(문자열) </a></li>
+            <li><a href="#sample03">배열 메서드 : push() : 배열 마지막요소 추가하기 : 반환(숫자) </a></li>
+            <li><a href="#sample03">배열 메서드 : unshift() : 배열 처음 요소 추가하기 : 반환(숫자) </a></li>
+            <li><a href="#sample04">배열 메서드 : shift() : 배열 첫 요소 추가하기 : 반환(삭제된 요소) </a></li>
+            <li><a href="#sample04">배열 메서드 : pop() : 배열 마지막 요소 삭제하기 : 반환(삭제된 요소) </a></li>
+            <li><a href="#sample05">배열 메서드 : indexOf() : 배열 요소 검색하기 : 반환(숫자) </a></li>
+            <li><a href="#sample05">배열 메서드 : lastIndexOf() : 배열 요소 끝에서 검색하기 : 반환(숫자) </a></li>
+            <li><a href="#sample05">배열 메서드 : incluedes() : 배열 요소 검색하기 : 반환(숫자) </a></li>
+            <li><a href="#sample06">배열 메서드 : reverse() : 배열 요소의 순서를 반대로 정렬할 때 : 반환(배열) </a></li>
+            <li><a href="#sample06">배열 메서드 : sort() : 배열 요소를 정렬할 때 : 반환(배열) </a></li>
+            <li><a href="#sample07">배열 메서드 : concat() : 배열 요소를 결합할 때 : 반환(배열) </a></li>
+            <li><a href="#sample08">배열 메서드 : slice() : 배열 요소를 다른요소로 변경할 때 : 반환(배열) </a></li>
+            <li><a href="#sample09">배열 메서드 : splice() : 배열 요소를 다른요소로 변경할 때 : 반환(배열) </a></li>        
+            <li><a href="#sample10">배열 메서드 : find() : 배열 요소 검색하기 : 반환(요소) </a></li>
+            <li><a href="#sample10">배열 메서드 : findIndex() : 배열 첫 요소 검색하기 : 반환(요소) </a></li>
+            <li><a href="#sample11">배열 메서드 : filter() : 조건에 만족하는 배열 요소 검색하기 : 반환(배열) </a></li>
+            <li><a href="#sample12">배열 메서드 : map() : 배열 요소를 추출하여 새로운 배열로 만들기 : 반환(배열) </a></li>
+            <li><a href="#sample13">배열 메서드 : reduce() : 배열 요소를 하나로 만들기 : 반환(결과값) </a></li>
+            <li><a href="#sample13">배열 메서드 : reduceRight() : 배열 요소를 하나로 만들기 : 반환(결과값) </a></li>
+            <li><a href="#sample14">배열 메서드 : Array.from() : 배열로 변환하기 : 반환(배열) </a></li>
+        </ol>
+    </div>
     <hr>
 
     <!--sample01-->
